--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,13 +2,21 @@
 
 <layout>
     
+    <data>
+    
+        <variable
+            name="activity"
+            type="com.thushcapone.materialphonewidget.MainActivity"
+            />
+        
+    </data>
+    
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/spacing_normal"
         android:orientation="vertical"
         tools:context=".MainActivity"
         >
@@ -28,6 +36,7 @@
             android:layout_marginTop="@dimen/spacing_normal"
             app:hint="@string/sample_hint_phone_number"
             app:defaultCountry="US"
+            app:onValidPhoneListener="@{activity::onValidPhoneTyped}"
             />
         
         <com.google.android.material.textfield.TextInputEditText
